--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
   displayName: Deploy to Dev
   dependsOn: Build
   variables:
-    acrsecret: acrAuth
+    acrsecret: acrauth
   jobs:
   - job: Deploy
     displayName: Deploy to AKS
